5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4139/executions/1863_1296.log
== SUBMITION (2019-07-02 11:55:08) 
-- CODE:
from numpy import*
from numpy.linalg import*

vet = array(eval(input("vetor: "))).T
mat = array([[8,10,16],
				 [2,3,5],
				 [1,2,3]])

re = 

print("centurion: ",round(vet[0,1],0))
print("tribune: ",round(vet[0,2],0))
print("senator: ",round(vet[0,3],0))
if min(vet) == vet[0,1]:
	print("centurion")
if min(vet) == vet[0,2]:
	print("tribune")
if min(vet) == vet[0,3]:
	print("senator")
-- EXECUTION TIME:
1.23745
-- ERROR:
  File "/home/codebench/codes/1863/1296/main.py", line 9
    re = 
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 11:55:08) 
-- CODE:
from numpy import*
from numpy.linalg import*

vet = array(eval(input("vetor: "))).T
mat = array([[8,10,16],
				 [2,3,5],
				 [1,2,3]])

re = 

print("centurion: ",round(vet[0,1],0))
print("tribune: ",round(vet[0,2],0))
print("senator: ",round(vet[0,3],0))
if min(vet) == vet[0,1]:
	print("centurion")
if min(vet) == vet[0,2]:
	print("tribune")
if min(vet) == vet[0,3]:
	print("senator")
-- EXECUTION TIME:
3.09535
-- ERROR:
  File "/home/codebench/codes/1863/1296/main.py", line 9
    re = 
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 11:55:08) 
-- CODE:
from numpy import*
from numpy.linalg import*

vet = array(eval(input("vetor: "))).T
mat = array([[8,10,16],
				 [2,3,5],
				 [1,2,3]])

re = 

print("centurion: ",round(vet[0,1],0))
print("tribune: ",round(vet[0,2],0))
print("senator: ",round(vet[0,3],0))
if min(vet) == vet[0,1]:
	print("centurion")
if min(vet) == vet[0,2]:
	print("tribune")
if min(vet) == vet[0,3]:
	print("senator")
-- EXECUTION TIME:
4.07197
-- ERROR:
  File "/home/codebench/codes/1863/1296/main.py", line 9
    re = 
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 11:55:09) 
-- CODE:
from numpy import*
from numpy.linalg import*

vet = array(eval(input("vetor: "))).T
mat = array([[8,10,16],
				 [2,3,5],
				 [1,2,3]])

re = 

print("centurion: ",round(vet[0,1],0))
print("tribune: ",round(vet[0,2],0))
print("senator: ",round(vet[0,3],0))
if min(vet) == vet[0,1]:
	print("centurion")
if min(vet) == vet[0,2]:
	print("tribune")
if min(vet) == vet[0,3]:
	print("senator")
-- EXECUTION TIME:
4.36487
-- ERROR:
  File "/home/codebench/codes/1863/1296/main.py", line 9
    re = 
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 11:55:09) 
-- CODE:
from numpy import*
from numpy.linalg import*

vet = array(eval(input("vetor: "))).T
mat = array([[8,10,16],
				 [2,3,5],
				 [1,2,3]])

re = 

print("centurion: ",round(vet[0,1],0))
print("tribune: ",round(vet[0,2],0))
print("senator: ",round(vet[0,3],0))
if min(vet) == vet[0,1]:
	print("centurion")
if min(vet) == vet[0,2]:
	print("tribune")
if min(vet) == vet[0,3]:
	print("senator")
-- EXECUTION TIME:
5.01161
-- ERROR:
  File "/home/codebench/codes/1863/1296/main.py", line 9
    re = 
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 11:55:09) 
-- CODE:
from numpy import*
from numpy.linalg import*

vet = array(eval(input("vetor: "))).T
mat = array([[8,10,16],
				 [2,3,5],
				 [1,2,3]])

re = 

print("centurion: ",round(vet[0,1],0))
print("tribune: ",round(vet[0,2],0))
print("senator: ",round(vet[0,3],0))
if min(vet) == vet[0,1]:
	print("centurion")
if min(vet) == vet[0,2]:
	print("tribune")
if min(vet) == vet[0,3]:
	print("senator")
-- EXECUTION TIME:
5.33938
-- ERROR:
  File "/home/codebench/codes/1863/1296/main.py", line 9
    re = 
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
